--- a/ArchitectureSample/Base.lproj/Main.storyboard
+++ b/ArchitectureSample/Base.lproj/Main.storyboard
@@ -22,13 +22,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Unable to fetch events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="geC-4K-9hg">
-                                <rect key="frame" x="166" y="323" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Uer-Eg-Ey2" userLabel="Error View">
+                                <rect key="frame" x="166.5" y="308.5" width="172.5" height="50.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unable to fetch events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="geC-4K-9hg">
+                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhZ-1i-zyl" userLabel="Retry Button">
+                                        <rect key="frame" x="0.0" y="20.5" width="172.5" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="retryClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j7N-mh-hCr"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="e6x-MI-dxS">
                                 <rect key="frame" x="16" y="20" width="343" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -55,14 +66,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Uer-Eg-Ey2" secondAttribute="trailing" constant="20" id="2va-er-9PR"/>
                             <constraint firstItem="e6x-MI-dxS" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="G4q-TX-hZ4"/>
                             <constraint firstItem="e6x-MI-dxS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="JMq-gN-eYz"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="e6x-MI-dxS" secondAttribute="bottom" id="RK4-dS-uw6"/>
+                            <constraint firstItem="Uer-Eg-Ey2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="XFB-fa-RsW"/>
                             <constraint firstItem="e6x-MI-dxS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="byM-yU-YGg"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="errorLabel" destination="geC-4K-9hg" id="gEy-PV-Nau"/>
+                        <outlet property="errorView" destination="Uer-Eg-Ey2" id="0t7-So-TAy"/>
                         <outlet property="tableView" destination="e6x-MI-dxS" id="C8v-P5-Wpe"/>
                     </connections>
                 </viewController>
