Add loaderView outlet

--- a/ArchitectureSample/Base.lproj/Main.storyboard
+++ b/ArchitectureSample/Base.lproj/Main.storyboard
@@ -78,6 +78,7 @@
                     </view>
                     <connections>
                         <outlet property="errorView" destination="Uer-Eg-Ey2" id="2Dp-i0-oTY"/>
+                        <outlet property="loaderView" destination="6Pj-Oh-5Vc" id="DNe-dV-6Jw"/>
                         <outlet property="tableView" destination="e6x-MI-dxS" id="3PH-Hg-e0S"/>
                     </connections>
                 </viewController>
