--- a/ArchitectureSample/Base.lproj/Main.storyboard
+++ b/ArchitectureSample/Base.lproj/Main.storyboard
@@ -47,22 +47,28 @@
                                 <rect key="frame" x="16" y="20" width="343" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Event Cell" textLabel="0Hg-RN-9Y1" rowHeight="90" style="IBUITableViewCellStyleDefault" id="xwW-cV-rCN">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Event Cell" rowHeight="90" id="xwW-cV-rCN" customClass="GithubEventCell" customModule="ArchitectureSample" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xwW-cV-rCN" id="VW8-fp-9AS">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="89.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="89"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0Hg-RN-9Y1">
-                                                    <rect key="frame" x="15" y="0.0" width="313" height="89.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWe-PZ-Oud">
+                                                    <rect key="frame" x="150" y="34" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="qWe-PZ-Oud" firstAttribute="centerY" secondItem="VW8-fp-9AS" secondAttribute="centerY" id="KMy-ue-XVD"/>
+                                                <constraint firstItem="qWe-PZ-Oud" firstAttribute="centerX" secondItem="VW8-fp-9AS" secondAttribute="centerX" id="v8L-WH-5Et"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="typeLabel" destination="qWe-PZ-Oud" id="6Fb-NP-u2A"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
