--- a/Templates/swifty_viper/Tests/Presenter/presenter_tests.swift.liquid
+++ b/Templates/swifty_viper/Tests/Presenter/presenter_tests.swift.liquid
@@ -6,18 +6,13 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-import XCTest
+import Quick
+import Nimble
 
-class {{ module_info.name }}PresenterTest: XCTestCase {
+class {{ module_info.name }}PresenterTest: QuickSpec {
 
-    override func setUp() {
-        super.setUp()
-        // Put setup code here. This method is called before the invocation of each test method in the class.
-    }
+    override func spec() {
 
-    override func tearDown() {
-        // Put teardown code here. This method is called after the invocation of each test method in the class.
-        super.tearDown()
     }
 
     class MockInteractor: {{ module_info.name }}InteractorInput {
