Fix swiftlint warnings

--- a/Templates/swifty_viper/Code/Configurator/configurator.swift.liquid
+++ b/Templates/swifty_viper/Code/Configurator/configurator.swift.liquid
@@ -10,7 +10,7 @@ import UIKit
 
 class {{ module_info.name }}ModuleConfigurator {
 
-    private let configuration: ({{ module_info.name }}ModuleInput) -> ()
+    private let configuration: ({{ module_info.name }}ModuleInput) -> Void
 
     init() {
         configuration = { input in
