Update template and generamba configuration to remove test targets from app code

--- a/Templates/swifty_viper/Tests/Router/router_tests.swift.liquid
+++ b/Templates/swifty_viper/Tests/Router/router_tests.swift.liquid
@@ -8,6 +8,8 @@
 
 import Quick
 import Nimble
+@testable
+import {{ module_info.project_targets.first }}
 
 class {{ module_info.name }}RouterTests: QuickSpec {
 
